# text-diff

./: .gitignore  README-zh.md  README.md  electron-builder.yml  next.config.ts  package.json
.github/workflows/: desktop-build.yml  electron.yml
design/brand/: og.html
docs/superpowers/plans/: 2026-06-17-electron-desktop.md
docs/superpowers/specs/: 2026-06-17-electron-desktop-design.md
electron/: constants.js  locale.js  locale.test.js  main.js  protocol.js  resolvePath.js  resolvePath.test.js  store.js  store.test.js  tray.js  window-state.js
messages/: ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  pt.json  ru.json  th.json  tr.json  vi.json  zh-hant.json  zh.json
scripts/: electron-dev.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  update-version.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: fetch-webview2-runtime.ps1
src-tauri/src/: lib.rs
src/app/: ThemesProvider.tsx
src/app/[locale]/: CodeInput.tsx  DiffPane.tsx  FirstDiffBanner.tsx  TextDiff.tsx  client.tsx  diffEngine.ts  formats.ts  page.tsx  textDiff.module.css
src/app/components/: TauriIntegration.tsx  projects.tsx
src/app/hooks/: useAutoUpdate.ts  useLanguagePreference.ts
src/app/ui/navigation/: LanguageSelector.tsx  Navigation.tsx
src/app/utils/: externalLink.ts  externalLink.tsx  languageStorage.ts  tauriLanguage.ts  updater.ts
src/types/: diff.d.ts
